# afterburn

./: .gitignore  LICENSE  README.md  THIRD-PARTY-NOTICES  pyproject.toml
.claude/commands/: afterburn-archive.md  afterburn-discover.md  afterburn-evolve.md  afterburn-status.md  enhanced-insights.md  insights.md
.github/workflows/: ci.yml  diode-pr-guard.yml  qa-diamond.yml
afterburn/: __init__.py  __main__.py  archive.py  cli.py  dead_releases.py  discover.py  evolve.py  findings.py  install.py  narrative.py  passes.py  scanner.py
afterburn/prompts/: friction.py  gaps.py  patterns.py
docs/: llms.txt  whitepaper.md
tests/: test_archive.py  test_correlation.py  test_dead_releases.py  test_findings.py  test_scanner.py  test_taxonomy.py
