[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "afterburn"
version = "0.1.0"
description = "Extract residual intelligence from spent Claude Code sessions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["requests"]
authors = [
    {name = "ZenProcess"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
afterburn = "afterburn.cli:main"

[project.urls]
Homepage = "https://github.com/zenprocess/afterburn"
Issues = "https://github.com/zenprocess/afterburn/issues"

[tool.setuptools.packages.find]
include = ["afterburn*"]
